--- a/pages/project1.html
+++ b/pages/project1.html
@@ -13,7 +13,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_720,f_avif,q_auto,c_fill,g_auto/v1/image.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_720,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 941px)"
       fetchpriority="high"
@@ -23,7 +23,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_940,h_542,f_avif,q_auto,c_fill,g_auto/v1/image.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_940,h_542,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 681px) and (max-width: 940px)"
     />
@@ -32,7 +32,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_680,h_469,f_avif,q_auto,c_fill,g_auto/v1/image.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_680,h_469,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 481px) and (max-width: 680px)"
     />
@@ -41,7 +41,7 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_480,h_360,f_avif,q_auto,c_fill,g_auto/v1/image.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_480,h_360,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(max-width: 480px)"
     />
@@ -120,10 +120,10 @@
         <img
           src="https://res.cloudinary.com/dnptzisuf/image/upload/w_960,h_720,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
           srcset="
-            https://res.cloudinary.com/dnptzisuf/image/upload/w_480,h_360,f_avif,q_auto,c_fill,g_auto/v1/image.avif 480w,
-            https://res.cloudinary.com/dnptzisuf/image/upload/w_680,h_469,f_avif,q_auto,c_fill,g_auto/v1/image.avif 680w,
-            https://res.cloudinary.com/dnptzisuf/image/upload/w_940,h_542,f_avif,q_auto,c_fill,g_auto/v1/image.avif 940w,
-            https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_720,f_avif,q_auto,c_fill,g_auto/v1/image.avif 1200w
+            https://res.cloudinary.com/dnptzisuf/image/upload/w_480,h_360,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif 480w,
+            https://res.cloudinary.com/dnptzisuf/image/upload/w_680,h_469,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif 680w,
+            https://res.cloudinary.com/dnptzisuf/image/upload/w_940,h_542,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif 940w,
+            https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_720,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif 1200w
           "
           sizes="(max-width: 480px) 100vw,
                 (max-width: 680px) 100vw,
