added a fallback preload link for safety

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -9,6 +9,13 @@
 
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_960,h_720,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      type="image/avif"
+    />
+
     <!-- Preload for Desktop (≥ 941px, uses 30vw so preload 1200w for LCP) -->
     <link
       rel="preload"
