--- a/pages/project1.html
+++ b/pages/project1.html
@@ -12,10 +12,11 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_600,h_360,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_576,h_345,f_avif,q_auto,fl_lossy/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
       type="image/avif"
       fetchpriority="high"
-    />
+      media="(min-width: 941px)"
+    >
 
     <link rel="preload" href="/assets/fonts/georgia.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="/assets/fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -88,27 +89,48 @@
     <header>
       <div id="nav"></div>
       <div class="canvas-skills-grid">
-        <img
-          src="https://res.cloudinary.com/dnptzisuf/image/upload/w_576,h_345,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
-          srcset="
-            https://res.cloudinary.com/dnptzisuf/image/upload/w_480,h_360,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif 480w,
-            https://res.cloudinary.com/dnptzisuf/image/upload/w_680,h_469,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif 680w,
-            https://res.cloudinary.com/dnptzisuf/image/upload/w_940,h_542,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif 940w,
-            https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_720,f_avif,q_auto,c_fill,g_auto/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif 1200w
-          "
-          sizes="(max-width: 480px) 100vw,
-                (max-width: 680px) 100vw,
-                (max-width: 940px) 100vw,
-                30vw"
-          width="576"
-          height="345"
-          alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals..."
-          fetchpriority="high"
-          decoding="async"
-          loading="eager"
-          style="object-fit: cover; width: 100%; height: auto;"
-        />
-
+        <picture>
+          <!-- Desktop image (≥1200px) -->
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_720,f_avif,q_auto,fl_lossy/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+            media="(min-width: 1200px)"
+            type="image/avif"
+          />
+          <!-- Tablet image (941px–1199px) -->
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+            media="(min-width: 941px)"
+            type="image/avif"
+          />
+          <!-- Mobile fallback (≤940px) -->
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_480,h_360,f_avif,q_auto,fl_lossy/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+            media="(max-width: 940px)"
+            type="image/avif"
+          />
+          <!-- Final fallback <img> element -->
+          <img
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/w_576,h_345,f_avif,q_auto,fl_lossy/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+            srcset="
+              https://res.cloudinary.com/dnptzisuf/image/upload/w_480,h_360,f_avif,q_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif 480w,
+              https://res.cloudinary.com/dnptzisuf/image/upload/w_576,h_345,f_avif,q_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif 576w,
+              https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif 768w,
+              https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_720,f_avif,q_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif 1200w
+            "
+            sizes="(max-width: 480px) 100vw,
+                  (max-width: 680px) 100vw,
+                  (max-width: 940px) 100vw,
+                  (max-width: 1200px) 576px,
+                  30vw"
+            width="576"
+            height="345"
+            alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals..."
+            fetchpriority="high"
+            decoding="async"
+            loading="eager"
+            style="object-fit: cover; width: 100%; height: auto;"
+          />
+        </picture>
         <div class="canvas-skills-title">
           <h1>a canvas of code:</h1>
           <h2>showcasing the craft</h2>
