--- a/pages/project1.html
+++ b/pages/project1.html
@@ -25,10 +25,10 @@
     <link rel="preload" as="image" href="/img/tech_trends_hero_mobile.avif" type="image/avif" media="(max-width: 940px)" fetchpriority="high">
 
     <!-- Preload for tablet -->
-    <link rel="preload" as="image" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_768,h_432,c_fill,g_auto/v1747049366/tech_trends_hero.avif" type="image/avif" media="(min-width: 941px) and (max-width: 1199px)">
+    <link rel="preload" as="image" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip,w_768,h_432/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif" type="image/avif" media="(min-width: 941px) and (max-width: 1199px)">
 
     <!-- Preload for desktop -->
-    <link rel="preload" as="image" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1200,h_720,c_fill,g_auto/v1747049366/tech_trends_hero.avif" type="image/avif" media="(min-width: 1200px)">
+    <link rel="preload" as="image" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif" type="image/avif" media="(min-width: 1200px)">
 
 
     <link rel="preload" href="/styles/styles-article.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -96,13 +96,13 @@
         <picture id="hero-img">
           <!-- Desktop: 1200px+ -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1200,h_720,c_fill,g_auto/v1747049366/tech_trends_hero.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/w_1200,h_720/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
             type="image/avif"
             media="(min-width: 1200px)" />
 
           <!-- Tablet: 941px–1199px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_768,h_432,c_fill,g_auto/v1747049366/tech_trends_hero.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/w_768,h_432/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
             type="image/avif"
             media="(min-width: 941px)" />
 
@@ -114,7 +114,7 @@
 
           <!-- Fallback image -->
           <img
-            src="/img/tech_trends_hero_mobile.avif"
+            src="/img/welcome_to_tech_trends_mobile.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology motifs"
             width="576"
             height="345"
