added type to img

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -131,6 +131,7 @@
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_576,h_324,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology motifs"
+            type="image/avif"
             width="576"
             height="324"
             style="aspect-ratio: 16 / 9; object-fit: cover; width: 100%; height: auto;"
