--- a/pages/project1.html
+++ b/pages/project1.html
@@ -37,7 +37,7 @@
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_576,h_324,dpr_auto,fl_lossy,fl_force_strip,w_576,h_324/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_576,h_324,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif" 
       type="image/avif" 
       media="(max-width: 940px)" 
       fetchpriority="high" 
