changed each image width and height inline, removed min-heights, depending on inline changes, restructured css for wireframes

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -122,19 +122,19 @@
 
           <!-- Mobile: ≤940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_576,h_324,dpr_auto,fl_lossy,fl_force_strip,w_576,h_324/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_940,h_528,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             type="image/avif"
             media="(max-width: 940px)"
             sizes="100vw" />
 
           <!-- Fallback image -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_576,h_324,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_676,h_398,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology motifs"
             type="image/avif"
-            width="576"
-            height="324"
-            style="aspect-ratio: 16 / 9; object-fit: cover; width: 100%; height: auto;"
+            width="676"
+            height="398"
+            style="object-fit: cover;"
             fetchpriority="high"
             decoding="async"
             loading="eager" />
@@ -203,10 +203,10 @@
               src="/img/seo-grade-mobile.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
               alt="Tech Trends Blog SEO grade result showing performance and optimization"
-              width="303"
-              height="262"
+              width: 840;
+              height: 726;
               style="object-fit: cover;"
-              loading="lazy"
+              loading="lazy"  
               fetchpriority="auto"
               decoding="async"
             />
@@ -262,8 +262,8 @@
             <img 
               src="/img/desktop-grade-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="303"
-              height="255"
+              width="840"
+              height="707"
               style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
@@ -291,8 +291,8 @@
             <img 
               src="/img/tech-trends-start-desktop-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="304"
-              height="322"
+              width="840"
+              height="853"
               style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
@@ -321,8 +321,8 @@
             <img 
               src="/img/tech-trends-finish-desktop-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance after optimization"
-              width="304"
-              height="322"
+              width="840"
+              height="888"
               style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
@@ -351,8 +351,8 @@
             <img 
               src="/img/mobile-grade-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="313"
-              height="265"
+              width="840"
+              height="712"
               style="object-fit: cover;"
               loading="lazy"
             fetchpriority="low"
@@ -380,8 +380,8 @@
             <img 
               src="/img/tech-trends-start-mobile-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="304"
-              height="309"
+              width="840"
+              height="891"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -409,8 +409,8 @@
             <img 
               src="/img/tech-trends-finish-mobile-mobile.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="304"
-              height="323"
+              width="840"
+              height="891"
               style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
@@ -439,8 +439,8 @@
             <img 
               src="/img/hubspot-grade-mobile.avif"
               alt="HubSpot grade showing SEO performance score for Tech Trends Blog"
-              width="304"
-              height="434"
+              width="840"
+              height="1196"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -467,8 +467,8 @@
             <img 
               src="/img/allisonstock-black-logo-mobile.avif"
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              width="296"
-              height="129"
+              width="840"
+              height="351"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -514,8 +514,8 @@
             <img 
               src="/img/website-design-tech-trends-mobile.avif"
               alt="Website design concept for Tech Trends Blog, featuring a blend of modern and futuristic design elements that reflect the blog's focus on cutting-edge technology."
-              width="272"
-              height="228"
+              width="837"
+              height="702"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -544,7 +544,7 @@
         <div class="past-meets-future fancy-border-img" id="past-meets-future-img">          
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_632,h_407,dpr_auto,c_fill,g_auto/v1747144506/past-meets-future_pmafy7.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_837,h_975,dpr_auto,c_fill,g_auto/v1747144506/past-meets-future_pmafy7.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -558,8 +558,8 @@
             <img 
               src="/img/past-meets-future-mobile.avif"
               alt="A design concept for Tech Trends Blog, merging past and future elements with modern and futuristic visuals."
-              width="272"
-              height="318"
+              width="837"
+              height="975"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -601,8 +601,8 @@
               src="/img/homepage-wireframe-tech-trends-mobile.avif"
               alt="Wireframe of the homepage layout for Tech Trends Blog"
               object-fit="cover"
-              width="316"
-              height="1076"
+              width="837"
+              height="2822"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -628,8 +628,8 @@
               src="/img/category-wireframe-tech-trends-mobile.avif"
               alt="Wireframe of the homepage layout for Tech Trends Blog"
               object-fit="cover"
-              width="316"
-              height="1137"
+              width="837"
+              height="1506"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -655,8 +655,8 @@
               src="/img/article-wireframe-tech-trends-mobile.avif"
               alt="Wireframe of the article page layout for Tech Trends Blog"
               object-fit="cover"
-              width="316"
-              height="729"
+              width="837"
+              height="2829"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -700,8 +700,8 @@
               src="/img/tech-trends-welcome-cute-robot-mobile.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
               object-fit="cover"
-              width="296"
-              height="190"
+              width="940"
+              height="632"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
@@ -843,8 +843,8 @@
             <img 
               src="/img/allisonstock-black-logo-mobile.avif"
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              width="376"
-              height="164"
+              width="840"
+              height="351"
               loading="lazy"
               fetchpriority="low"
               style="object-fit: cover;"
