--- a/pages/project1.html
+++ b/pages/project1.html
@@ -17,7 +17,7 @@
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_675,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_744,h_418,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif" 
       type="image/avif" 
       media="(min-width: 1200px)" 
       fetchpriority="high" 
@@ -27,7 +27,7 @@
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_768,h_432,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_455,h_256,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif" 
       type="image/avif" 
       media="(min-width: 941px) and (max-width: 1199px)" 
       fetchpriority="high" 
@@ -37,7 +37,7 @@
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_576,h_324,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_915,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif" 
       type="image/avif" 
       media="(max-width: 940px)" 
       fetchpriority="high" 
@@ -108,23 +108,23 @@
         <picture id="hero-img">
           <!-- Desktop: 1200px+ -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1200,h_675,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_744,h_418,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
             type="image/avif"
             media="(min-width: 1200px)"
             sizes="30vw" />
 
           <!-- Tablet: 941px–1199px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_768,h_432,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_455,h_256,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
             type="image/avif"
-            media="(min-width: 941px)"
+            media="(min-width: 941px) and (max-width: 1199px)"
             sizes="50vw" />
 
           <!-- Mobile: ≤940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_940,h_528,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_915,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             type="image/avif"
-            media="(max-width: 940px)"
+            media="(max-width: 940px)" 
             sizes="100vw" />
 
           <!-- Fallback image -->
