--- a/pages/project1.html
+++ b/pages/project1.html
@@ -13,40 +13,29 @@
     <link rel="preload" href="/assets/fonts/georgia.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="/assets/fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-    <!-- Preload for Desktop (1200px+) -->
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_744,h_418,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif" 
-      type="image/avif" 
-      media="(min-width: 1200px)" 
+    <!-- Preload LCP image for mobile (≤ 940px) -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_915,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      type="image/avif"
+      media="(max-width: 940px)"
       fetchpriority="high" 
     />
 
-    <!-- Preload for Tablet (941px–1199px) -->
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_455,h_256,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif" 
-      type="image/avif" 
-      media="(min-width: 941px) and (max-width: 1199px)" 
-      fetchpriority="high" 
-    />
-
-    <!-- Preload for Mobile (≤940px) -->
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_915,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif" 
-      type="image/avif" 
-      media="(max-width: 940px)" 
+    <!-- Preload LCP image for desktop (≥ 1200px) -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_744,h_418,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
+      type="image/avif"
+      media="(min-width: 1200px)"
       fetchpriority="high" 
     />
 
     <link rel="preload" href="/styles/styles-article.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-
 
     <noscript><link rel="stylesheet" href="/styles/styles-article.css"></noscript>
 
@@ -124,21 +113,21 @@
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_915,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             type="image/avif"
-            media="(max-width: 940px)" 
+            media="(max-width: 940px)"
             sizes="100vw" />
 
-          <!-- Fallback image -->
+          <!-- Fallback image: use exact render size @ 940px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_676,h_398,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_916,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology motifs"
-            type="image/avif"
-            width="676"
-            height="398"
+            width="916"
+            height="515"
             style="object-fit: cover;"
             fetchpriority="high"
             decoding="async"
             loading="eager" />
         </picture>
+
         <div class="canvas-skills-title">
           <h1>a canvas of code:</h1>
           <h2>showcasing the craft</h2>
