fixed syntax error

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -192,8 +192,8 @@
               src="/img/seo-grade-mobile.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
               alt="Tech Trends Blog SEO grade result showing performance and optimization"
-              width: 840;
-              height: 726;
+              width:"840"
+              height:"726"
               style="object-fit: cover;"
               loading="lazy"  
               fetchpriority="auto"
