--- a/pages/project1.html
+++ b/pages/project1.html
@@ -177,13 +177,13 @@
         <div class="grade-img fancy-border-img" id="grade-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_616,h_532,dpr_auto,c_fill,g_auto/v1743469949/seo-grade_mmztmf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_744,h_418,dpr_auto,c_fill,g_auto/v1743469949/seo-grade_mmztmf.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1743469949/seo-grade_mmztmf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_455,h_256,f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1743469949/seo-grade_mmztmf.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
@@ -192,8 +192,8 @@
               src="/img/seo-grade-mobile.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
               alt="Tech Trends Blog SEO grade result showing performance and optimization"
-              width:"840"
-              height:"726"
+              width="840"
+              height="726"
               style="object-fit: cover;"
               loading="lazy"  
               fetchpriority="auto"
