--- a/pages/project1.html
+++ b/pages/project1.html
@@ -120,6 +120,7 @@
           <img
             src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_916,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology motifs"
+            type="image/avif"
             width="916"
             height="515"
             style="object-fit: cover;"
