--- a/pages/project1.html
+++ b/pages/project1.html
@@ -13,7 +13,7 @@
     <link rel="preload" href="/assets/fonts/georgia.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="/assets/fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-    <!-- Preload LCP image for mobile (≤ 940px) -->
+    <!-- Preload mobile LCP image (≤ 940px) -->
     <link
       rel="preload"
       as="image"
@@ -23,7 +23,7 @@
       fetchpriority="high" 
     />
 
-    <!-- Preload LCP image for desktop (≥ 1200px) -->
+    <!-- Preload desktop LCP image (≥ 1200px) -->
     <link
       rel="preload"
       as="image"
@@ -32,6 +32,7 @@
       media="(min-width: 1200px)"
       fetchpriority="high" 
     />
+
 
     <link rel="preload" href="/styles/styles-article.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
