--- a/pages/project1.html
+++ b/pages/project1.html
@@ -17,10 +17,10 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_744,h_418,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
       type="image/avif"
       media="(min-width: 1200px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_744,h_418,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
       imagesizes="30vw"
     />
 
@@ -28,10 +28,10 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_455,h_256,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_455,h_256,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
       type="image/avif"
       media="(min-width: 941px) and (max-width: 1199px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_455,h_256,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_455,h_256,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
       imagesizes="50vw"
     />
 
@@ -39,10 +39,10 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_915,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(max-width: 940px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_915,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       imagesizes="100vw"
     />
 
@@ -110,30 +110,31 @@
         <picture id="hero-img">
           <!-- Desktop: 1200px+ -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_744,h_418,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
             type="image/avif"
             media="(min-width: 1200px)"
             sizes="30vw" />
 
           <!-- Tablet: 941px–1199px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_455,h_256,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_455,h_256,dpr_auto,fl_lossy,fl_force_strip/v1742324200/welcome_to_tech_trends_desktop_hp4pdx.avif"
             type="image/avif"
             media="(min-width: 941px) and (max-width: 1199px)"
             sizes="50vw" />
 
           <!-- Mobile: ≤940px -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_915,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             type="image/avif"
             media="(max-width: 940px)"
             sizes="100vw" />
 
           <!-- Fallback image: use exact render size @ 940px -->
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_916,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515,dpr_auto,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology motifs"
             type="image/avif"
+            sizes="100vw"
             width="916"
             height="515"
             style="object-fit: cover;"
