updated preload links

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -24,7 +24,7 @@
       imagesizes="744px"
     />
 
-    <!-- Preload for Tablet 769px–940px -->
+    <!-- Preload for Tablet: 769px–940px -->
     <link
       rel="preload"
       as="image"
@@ -35,19 +35,17 @@
       imagesizes="916px"
     />
 
-    <!-- Preload for Mobile ≤ 768px (fetchpriority=high) -->
+    <!-- Preload for Mobile: 481px–768px -->
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_480,h_270,fl_lossy,fl_force_strip/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418,fl_lossy,fl_force_strip/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
-      media="(max-width: 768px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_480,h_270,fl_lossy,fl_force_strip/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
-      imagesizes="100vw"
+      media="(min-width: 481px) and (max-width: 768px)"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418,fl_lossy,fl_force_strip/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      imagesizes="744px"
       fetchpriority="high"
     />
-
-
     <link rel="preload" href="/styles/styles-article.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
