--- a/pages/project1.html
+++ b/pages/project1.html
@@ -13,33 +13,51 @@
     <link rel="preload" href="/assets/fonts/georgia.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="/assets/fonts/SegoeUI.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-    <!-- Desktop ≥ 941px -->
-    <link rel="preload" as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+    <!-- ✅ Desktop ≥ 941px -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
       type="image/avif"
       media="(min-width: 941px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
-      imagesizes="30vw"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418,fl_lossy,fl_force_strip/v1742647059/welcome_to_tech_trends_desktop_gxfoz3.avif"
+      imagesizes="744px"
     />
 
-    <!-- Tablet: 769px–940px -->
-    <link rel="preload" as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515/v1747791270/welcome_to_tech_trends_940_t35mfb.avif"
+    <!-- ✅ Tablet: 769px–940px -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515,fl_lossy,fl_force_strip/v1747791270/welcome_to_tech_trends_940_t35mfb.avif"
       type="image/avif"
       media="(min-width: 769px) and (max-width: 940px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515/v1747791270/welcome_to_tech_trends_940_t35mfb.avif"
-      imagesizes="100vw" 
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_916,h_515,fl_lossy,fl_force_strip/v1747791270/welcome_to_tech_trends_940_t35mfb.avif"
+      imagesizes="916px"
     />
 
-    <!-- Mobile ≤ 768px -->
-    <link rel="preload" as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto,w_480,h_270/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
+    <!-- ✅ Mobile: 481px–768px -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418,fl_lossy,fl_force_strip/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
       type="image/avif"
-      media="(max-width: 768px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto,w_480,h_270/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
-      imagesizes="100vw" 
+      media="(min-width: 481px) and (max-width: 768px)"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_744,h_418,fl_lossy,fl_force_strip/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+      imagesizes="744px"
     />
-    
+
+    <!-- ✅ Optional fallback for ≤480px -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_480,h_270,fl_lossy,fl_force_strip/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
+      type="image/avif"
+      media="(max-width: 480px)"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_480,h_270,fl_lossy,fl_force_strip/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
+      imagesizes="480px"
+    />
+
+
     <link rel="preload" href="/styles/styles-article.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
     <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
