reverted back to prior links

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -50,10 +50,10 @@
     <link
       rel="preload"
       as="image"
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_480,h_270,fl_lossy,fl_force_strip/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto,w_480,h_270/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
       type="image/avif"
       media="(max-width: 480px)"
-      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_480,h_270,fl_lossy,fl_force_strip/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
+      imagesrcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto,w_480,h_270/v1747755941/welcome_to_tech_trends_mobile_c2odp7.avif"
       imagesizes="480px"
     />
 
