updated css for hero image picture tag

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -146,7 +146,7 @@
             fetchpriority="high"
             loading="eager"
             decoding="async"
-            style="object-fit: cover;" 
+             style="object-fit: cover; aspect-ratio: 16 / 9; width: 100%; height: auto;"
           />
         </picture>
         <div class="canvas-skills-title">
